# react-native-lingua

./: .env.example  .gitignore  AGENTS.md  app.json  babel.config.js  global.css  package-lock.json  package.json  run-agent.sh  skills-lock.json
.agents/skills/stream-react/: RULES.md  SKILL.md  builder-ui.md  builder.md  enhance.md  migrate.md  sdk.md
.agents/skills/stream-react/references/: CHAT-blueprints.md  CHAT.md  CROSS-PRODUCT.md  DOCS.md  FEEDS-blueprints.md  VIDEO-blueprints.md  VIDEO.md
.agents/skills/stream-swift/: RULES.md  design-matching.md  docs-map.md  setup.md
.claude/skills/mcp-analytics/: SKILL.md
.claude/skills/mcp-analytics/references/: installation.md  start-here.md
app/: _layout.tsx  index.tsx  language-selection.tsx  onboarding.tsx
app/(auth)/: sign-in.tsx  sign-up.tsx
app/(tabs)/: _layout.tsx  ai-teacher.tsx  home.tsx  learn.tsx  profile.tsx
app/(tabs)/lesson/: [lessonId].tsx
app/api/stream/: audio-session+api.ts
app/api/stream/agent-session/: start+api.ts  stop+api.ts
app/lesson/: [lessonId].tsx
components/: AuthScreen.tsx  StreamVideoProvider.tsx  custom-tab-bar.tsx  home-screen.tsx  tab-placeholder-screen.tsx
constants/: images.ts
data/: languages.ts  lessons.ts  units.ts
lib/: streamAudio.ts
store/: languageStore.ts
theme/: tokens.ts
types/: learning.ts
vision-agent/: agent.py  pyproject.toml
