[project]
name = "lingua-vision-agent"
version = "0.0.0"
requires-python = ">=3.10,<3.14"

dependencies = [
  "httpx[socks]>=0.28.1",
  "python-dotenv>=1.2.2",
  "vision-agents==0.6.6",
  "vision-agents-plugins-getstream==0.6.6",
  "vision-agents-plugins-openai==0.6.6",
]

[tool.vision-agents.agent]
entrypoint = "agent:runner"
